err/dear.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dear'...
Listing './lib/python3.5/site-packages/dear/analysis'...
Compiling './lib/python3.5/site-packages/dear/crop.py'...
***   File "./lib/python3.5/site-packages/dear/crop.py", line 99
    print """Usage: $ python -m dear.crop <options>
Options:
     -i         input path
     -o         output path
    [-l]        length of clip, default 30 seconds.
    [-s]        start time in second, defaute 0
    [-t]        end time, default is duration of song
    [-a]        algorithm, could be one of ('mmag','mpwg'), default 'mmag'
    [-r]        samplerate, default 22050
    [-b]        bitrate, default 64k(bit)
    [-d]        dim seconds of begining and ending, default 4
    [--ffmpeg]  specify the path of ffmpeg executable, default 'ffmpeg'
    [--sox]     specify the path of sox executable, default 'sox'
"""
                                                   
        
                          
                           
                                                   
                                               
                                                     
                                                                          
                                         
                                         
                                                             
                                                                       
                                                                 
  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dear/io'...
Compiling './lib/python3.5/site-packages/dear/io/_decoder.py'...
***   File "./lib/python3.5/site-packages/dear/io/_decoder.py", line 27
    print ex
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dear/spectrogram.py'...
***   File "./lib/python3.5/site-packages/dear/spectrogram.py", line 37
    print 'Statistics: max<%.3f> min<%.3f> mean<%.3f> median<%.3f>' % (data.max(), data.min(), data.mean(), np.median(data))
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dear/spectrum'...
Compiling './lib/python3.5/site-packages/dear/spectrum/cqt.py'...
***   File "./lib/python3.5/site-packages/dear/spectrum/cqt.py", line 66
    print len(var.WL), var.WL
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dear-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
